--- a/b7/css/style.css
+++ b/b7/css/style.css
@@ -6,12 +6,14 @@
 	position:relative; 
 	width:500px; 
 	height:260px;
+	margin: auto;
 }
 .slideshow1 img 
 {
 	position:absolute;
-	left:0; 
-	top:0;
+	left:0px; 
+	top:0px;
+	
 }
 
 /*sideShow 2*/
